--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	Zatrudnij programistę webowego: PHP, JavaScript, HTML, CSS, MySQL, WordPress"/>
 	<meta name="keywords" content="zamów stronę, tworzenie www, programista, portfolio, PHP, JavaScript, HTML, CSS, MySQL, WordPress"/>
 
-	<link rel="stylesheet" href="style.css" type="text/css" />
+	<link rel="stylesheet" href="style.css" type="text/css"/>
 	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Lato&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -17,22 +17,28 @@
 		<div class="rectangle">
 			<div id="logo">Robert Śpiewak</div>
 			<div id="zegar">12:12:12</div>
-			<div style"clear: both;></div>
+			<div style="clear:both;"></div>
 		</div>
 	<div class="square">
 		<div class="tile1">1</div>
 		<div class="tile1">1</div>
-		<div style="clear: both;"></div>
+		<div style="clear:both;"></div>
 		
 		<div class="tile2">2</div>
 		<div class="tile3">3</div>
 		<div style="clear:both;"></div>
-		
 		<div class="tile4">4</div>
 	</div>
-	<div class="square"></div>
-	<div style="clear: both;"></div>
-	<div class="rectangle"></div>
+	<div class="square">
+		<div class="tile5">5</div>
+		<div class="yt">yt</div>
+		<div class="fb">fb</div>
+		<div class="gplus">gplus</div>
+		<div class="tw">tw</div>
+		<div style="clear:both;"></div>
+	</div>
+	<div style="clear:both;"></div>
+	<div class="rectangle">2020 &copy; Robert Śpiewak- portfolio. Programista webowy zaprasza do wspópracy! robertspiewak2@gmail.com</div>
 	</div>
 
 </body>
