Add fontello etc

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<meta name="keywords" content="zamów stronę, tworzenie www, programista, portfolio, PHP, JavaScript, HTML, CSS, MySQL, WordPress"/>
 
 	<link rel="stylesheet" href="style.css" type="text/css"/>
+	<link rel="stylesheet" href="css/fontello.css" type="text/css"/>
 	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Lato&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -20,21 +21,39 @@
 			<div style="clear:both;"></div>
 		</div>
 	<div class="square">
-		<div class="tile1">1</div>
-		<div class="tile1">1</div>
+		<div class="tile1">
+			<i class="icon-user"></i><br/>Kim jestem?
+		</div>
+		<div class="tile1">
+			<i class="icon-laptop"></i><br/>Co oferuję?
+		</div>
 		<div style="clear:both;"></div>
 		
-		<div class="tile2">2</div>
-		<div class="tile3">3</div>
+		<div class="tile2">
+			<i class="icon-graduation-cap"></i><br/>Curriculum vitae
+		</div>
+		<div class="tile3">
+			<i class="icon-mail-alt"></i><br/>Kontakt ze mną
+		</div>
 		<div style="clear:both;"></div>
-		<div class="tile4">4</div>
+		<div class="tile4"><i>There is no code like no code.
+			That is, a solution that involves no code at all is often the best solution.</i>
+		</div>
 	</div>
 	<div class="square">
 		<div class="tile5">5</div>
-		<div class="yt">yt</div>
-		<div class="fb">fb</div>
-		<div class="gplus">gplus</div>
-		<div class="tw">tw</div>
+		<div class="yt">
+			<i class="icon-youtube-squared"></i>
+		</div>
+		<div class="fb">
+			<i class="icon-facebook-squared"></i>
+		</div>
+		<div class="gplus">
+			<i class="icon-gplus-squared"></i>
+		</div>
+		<div class="tw">
+			<i class="icon-twitter-squared"></i>
+		</div>
 		<div style="clear:both;"></div>
 	</div>
 	<div style="clear:both;"></div>
