Add hrefs and links.

--- a/index.html
+++ b/index.html
@@ -16,48 +16,58 @@
 <body>
 	<div id="container">
 		<div class="rectangle">
-			<div id="logo">Robert Śpiewak</div>
+			<a href="index.html.html" class="tilelinkhtml5"><div id="logo">Robert Śpiewak</div></a>
 			<div id="zegar">12:12:12</div>
 			<div style="clear:both;"></div>
 		</div>
 	<div class="square">
 		<div class="tile1">
-			<i class="icon-user"></i><br/>Kim jestem?
+			<a href="kimjestem.html" class="tilelink"><i class="icon-user"></i><br/>Kim jestem?</a>
 		</div>
-		<div class="tile1">
+		<a href="oferta.html" class="tilelinkhtml5"><div class="tile1">
 			<i class="icon-laptop"></i><br/>Co oferuję?
-		</div>
+			</div>
+		</a>
 		<div style="clear:both;"></div>
 		
-		<div class="tile2">
+		<a href="cv.html" class="tilelinkhtml5"><div class="tile2">
 			<i class="icon-graduation-cap"></i><br/>Curriculum vitae
-		</div>
-		<div class="tile3">
+		</div></a>
+		
+		<a href="kontakt.html" class="tilelinkhtml5"><div class="tile3">
 			<i class="icon-mail-alt"></i><br/>Kontakt ze mną
-		</div>
+		</div></a>
 		<div style="clear:both;"></div>
+		
 		<div class="tile4"><i>There is no code like no code.
 			That is, a solution that involves no code at all is often the best solution.</i>
 		</div>
 	</div>
 	<div class="square">
-		<div class="tile5">5</div>
-		<div class="yt">
+		<div class="tile5">
+			Tytył postrony<br/><br/>
+			Aenean et velit ultricies enim tempus malesuada. Sed venenatis arcu a sagittis molestie.
+			Morbi dapibus metus quis risus dapibus dictum. Proin nec neque turpis. 
+			Nunc felis sem, varius vitae elit non, fringilla varius felis. 
+
+		</div>
+		<a href="http://youtube.com" target="_blank" class="tilelinkhtml5"><div class="yt">
 			<i class="icon-youtube-squared"></i>
-		</div>
-		<div class="fb">
+		</div></a>
+		<a href="http://facebook.com" target="_blank" class="tilelinkhtml5"><div class="fb">
 			<i class="icon-facebook-squared"></i>
-		</div>
-		<div class="gplus">
+		</div></a>
+		<a href="http://aboutme.google.com" target="_blank" class="tilelinkhtml5"><div class="gplus">
 			<i class="icon-gplus-squared"></i>
-		</div>
-		<div class="tw">
+		</div></a>
+		<a href="http://twitter.com" target="_blank" class="tilelinkhtml5"><div class="tw">
 			<i class="icon-twitter-squared"></i>
-		</div>
+		</div></a>
 		<div style="clear:both;"></div>
 	</div>
 	<div style="clear:both;"></div>
-	<div class="rectangle">2020 &copy; Robert Śpiewak- portfolio. Programista webowy zaprasza do wspópracy! robertspiewak2@gmail.com</div>
+	<div class="rectangle">2020 &copy; Robert Śpiewak- portfolio. Programista webowy zaprasza do wspópracy!
+		 robertspiewak2@gmail.com<i class="icon-mail"></i></div>
 	</div>
 
 </body>
