--- a/demo.html
+++ b/demo.html
@@ -229,11 +229,11 @@ body {
 }
 @font-face {
       font-family: 'fontello';
-      src: url('./font/fontello.eot?44953379');
-      src: url('./font/fontello.eot?44953379#iefix') format('embedded-opentype'),
-           url('./font/fontello.woff?44953379') format('woff'),
-           url('./font/fontello.ttf?44953379') format('truetype'),
-           url('./font/fontello.svg?44953379#fontello') format('svg');
+      src: url('./font/fontello.eot?32204509');
+      src: url('./font/fontello.eot?32204509#iefix') format('embedded-opentype'),
+           url('./font/fontello.woff?32204509') format('woff'),
+           url('./font/fontello.ttf?32204509') format('truetype'),
+           url('./font/fontello.svg?32204509#fontello') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -299,17 +299,18 @@ body {
     <div class="container" id="icons">
       <div class="row">
         <div class="the-icons span3" title="Code: 0xe800"><i class="demo-icon icon-user">&#xe800;</i> <span class="i-name">icon-user</span><span class="i-code">0xe800</span></div>
+        <div class="the-icons span3" title="Code: 0xe801"><i class="demo-icon icon-mail">&#xe801;</i> <span class="i-name">icon-mail</span><span class="i-code">0xe801</span></div>
         <div class="the-icons span3" title="Code: 0xf0d4"><i class="demo-icon icon-gplus-squared">&#xf0d4;</i> <span class="i-name">icon-gplus-squared</span><span class="i-code">0xf0d4</span></div>
         <div class="the-icons span3" title="Code: 0xf0e0"><i class="demo-icon icon-mail-alt">&#xf0e0;</i> <span class="i-name">icon-mail-alt</span><span class="i-code">0xf0e0</span></div>
-        <div class="the-icons span3" title="Code: 0xf109"><i class="demo-icon icon-laptop">&#xf109;</i> <span class="i-name">icon-laptop</span><span class="i-code">0xf109</span></div>
       </div>
       <div class="row">
+        <div class="the-icons span3" title="Code: 0xf109"><i class="demo-icon icon-laptop">&#xf109;</i> <span class="i-name">icon-laptop</span><span class="i-code">0xf109</span></div>
         <div class="the-icons span3" title="Code: 0xf166"><i class="demo-icon icon-youtube-squared">&#xf166;</i> <span class="i-name">icon-youtube-squared</span><span class="i-code">0xf166</span></div>
         <div class="the-icons span3" title="Code: 0xf19d"><i class="demo-icon icon-graduation-cap">&#xf19d;</i> <span class="i-name">icon-graduation-cap</span><span class="i-code">0xf19d</span></div>
         <div class="the-icons span3" title="Code: 0xf2b6"><i class="demo-icon icon-envelope-open">&#xf2b6;</i> <span class="i-name">icon-envelope-open</span><span class="i-code">0xf2b6</span></div>
-        <div class="the-icons span3" title="Code: 0xf304"><i class="demo-icon icon-twitter-squared">&#xf304;</i> <span class="i-name">icon-twitter-squared</span><span class="i-code">0xf304</span></div>
       </div>
       <div class="row">
+        <div class="the-icons span3" title="Code: 0xf304"><i class="demo-icon icon-twitter-squared">&#xf304;</i> <span class="i-name">icon-twitter-squared</span><span class="i-code">0xf304</span></div>
         <div class="the-icons span3" title="Code: 0xf308"><i class="demo-icon icon-facebook-squared">&#xf308;</i> <span class="i-name">icon-facebook-squared</span><span class="i-code">0xf308</span></div>
       </div>
     </div>
